--- a/res/xml-v14/preferences.xml
+++ b/res/xml-v14/preferences.xml
@@ -2,12 +2,12 @@
 
     <PreferenceCategory android:title="Background Polling">
 
-        <SwitchPreference
+       <!-- <SwitchPreference
                 android:key="refreshCache"
                 android:title="Cache Refresh"
                 android:summary="Checks Zenoss every ~30minutes to update the local database"
                 android:defaultValue="true"
-                />
+                />-->
         
         <SwitchPreference
                 android:key="AllowBackgroundService"
@@ -118,6 +118,7 @@
 		    android:title="Notification Sound"
 		    android:summary="Choose the Zenoss Event alert sound." 
 		    android:ringtoneType="all"
+            android:defaultValue="content://settings/system/notification_sound"
 		    android:dependency="notificationSound"
 		    />
 		
