--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -2,12 +2,12 @@
 
     <PreferenceCategory android:title="Background Polling">
 
-        <CheckBoxPreference
+        <!--<CheckBoxPreference
                 android:key="refreshCache"
                 android:title="Cache Refresh"
                 android:summary="Checks Zenoss every hour or so for new devices etc"
                 android:defaultValue="true"
-                />
+                />-->
         
         <CheckBoxPreference
                 android:key="AllowBackgroundService"
