--- a/res/layout/view_zenoss_device_fragment.xml
+++ b/res/layout/view_zenoss_device_fragment.xml
@@ -50,7 +50,7 @@
 
             <LinearLayout
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_height="@dimen/DeviceGraphHeight"
                 android:orientation="horizontal"
                 android:paddingTop="@dimen/DeviceTitleVertPadding">
                 <ImageView
