--- a/res/xml-v14/preferences.xml
+++ b/res/xml-v14/preferences.xml
@@ -2,18 +2,18 @@
 
     <PreferenceCategory android:title="Background Polling">
 
-       <!-- <SwitchPreference
+       <SwitchPreference
                 android:key="refreshCache"
-                android:title="Cache Refresh"
-                android:summary="Checks Zenoss every ~30minutes to update the local database"
+                android:title="Periodic Cache Refresh"
+                android:summary="An Android Sync Adapter that checks for new devices, groups etc every 24 hours"
                 android:defaultValue="true"
-                />-->
+                />
         
         <SwitchPreference
                 android:key="AllowBackgroundService"
                 android:title="Events Alerting"
                 android:summary="Checks Zenoss for new events and raises notifications based on filters below" 
-                android:defaultValue="true"
+                android:defaultValue="false"
                 />
         
         <ListPreference
