--- a/res/layout/dream_grid_item.xml
+++ b/res/layout/dream_grid_item.xml
@@ -12,7 +12,8 @@
         android:id="@+id/groupImage"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"/>
+        android:layout_alignParentRight="true"
+        android:scaleType="fitXY" />
 
     <TextView
         android:layout_width="wrap_content"
