--- a/res/values-sw600dp-land/dimensions.xml
+++ b/res/values-sw600dp-land/dimensions.xml
@@ -2,4 +2,5 @@
 <resources>
     <integer name="GridColumns">5</integer>
     <dimen name="FirstSettingsPadding">200dp</dimen>
+    <integer name="DreamGraphs">6</integer>
 </resources>
