More things from the bugfix list

--- a/res/layout/view_zenoss_event.xml
+++ b/res/layout/view_zenoss_event.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="Title"
+        android:text="..."
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/ZenossDarkBlack"
         android:textStyle="bold"
@@ -133,7 +133,7 @@
                     android:layout_alignParentLeft="true"
                     android:layout_below="@+id/ComponantLabel"
                     android:layout_marginLeft="8dp"
-                    android:text="TextView"
+                    android:text="..."
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@color/RhybuddStdText"
                     android:paddingBottom="12dp">
@@ -162,7 +162,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/EventClassLabel"
-                    android:text="TextView"
+                    android:text="..."
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@color/RhybuddStdText"
                     android:layout_marginLeft="8dp"
@@ -194,7 +194,7 @@
                     android:layout_below="@+id/SummaryLabel"
                     android:gravity="bottom"
                     android:linksClickable="true"
-                    android:text="TextView"
+                    android:text="..."
                     android:textColorLink="@color/ZenossDarkBlue"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@color/RhybuddStdText"
@@ -289,7 +289,7 @@
                     android:layout_alignBaseline="@+id/AgentLabel"
                     android:layout_alignBottom="@+id/AgentLabel"
                     android:layout_toRightOf="@+id/AgentLabel"
-                    android:text="unknown"
+                    android:text="..."
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textColor="@color/RhybuddStdText" >
                 </TextView>
