--- a/res/layout/zenoss_device_listitem.xml
+++ b/res/layout/zenoss_device_listitem.xml
@@ -2,7 +2,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:background="@color/FlatGray">
     <RelativeLayout
     android:id="@+id/relativeLayout1"
     android:layout_width="fill_parent"
