--- a/res/values-sw600dp/dimensions.xml
+++ b/res/values-sw600dp/dimensions.xml
@@ -9,6 +9,8 @@
     <dimen name="WelcomePadding">24dp</dimen>
     <dimen name="DeviceDetailsPadding">16dp</dimen>
 
+    <!--<dimen name="EventListFragmentMargins">10dp</dimen>-->
+
     <dimen name="FirstSettingsPadding">80dp</dimen>
     <!-- View Groups -->
     <integer name="GridColumns">3</integer>
