--- a/res/layout/list_fragment.xml
+++ b/res/layout/list_fragment.xml
@@ -14,6 +14,7 @@
     android:clipToPadding="false"
     android:layout_marginLeft="@dimen/ListViewPaddMarg"
     android:layout_marginRight="@dimen/ListViewPaddMarg"
+    android:background="@color/FlatGray"
     android:divider="@android:color/transparent">
 
     </ListView>
