--- a/res/layout/view_zenoss_events_list.xml
+++ b/res/layout/view_zenoss_events_list.xml
@@ -12,6 +12,8 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           tools:context=".ViewZenossEventsListActivity"
+          android:layout_marginLeft="@dimen/EventListFragmentMargins"
+          android:layout_marginRight="@dimen/EventListFragmentMargins"
           tools:layout="@android:layout/list_content" />
     <!-- The navigation drawer -->
     <ListView android:id="@+id/left_drawer"
