--- a/res/layout/view_zenoss_event.xml
+++ b/res/layout/view_zenoss_event.xml
@@ -99,7 +99,7 @@
         android:id="@+id/scrollView1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@color/FlatGray"
+        android:background="@color/EventViewGray"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:fillViewport="false"
