--- a/res/layout/fragment_push_config.xml
+++ b/res/layout/fragment_push_config.xml
@@ -2,7 +2,9 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:paddingLeft="@dimen/EventListFragmentMargins"
+                android:paddingRight="@dimen/EventListFragmentMargins">
 
     <TextView
             android:layout_width="wrap_content"
