--- a/res/layout/groups_grid_item.xml
+++ b/res/layout/groups_grid_item.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
+        android:text=""
         android:id="@+id/groupTitle"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
