--- a/res/layout/view_zenoss_event.xml
+++ b/res/layout/view_zenoss_event.xml
@@ -35,7 +35,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="26dp"
-        android:text="Acknowledge"
+        android:text="@string/Acknowledge"
         android:id="@+id/button"
         android:layout_alignParentRight="true"
         style="@style/SmallRhybuddButton"
