--- a/res/layout/write_tag_activity.xml
+++ b/res/layout/write_tag_activity.xml
@@ -73,7 +73,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="Small Text"
+                    android:text=""
                     android:id="@+id/SizesText"
                     android:layout_below="@+id/writeWarning"
                     android:layout_centerHorizontal="true"
