--- a/res/layout/zenoss_device_listitem.xml
+++ b/res/layout/zenoss_device_listitem.xml
@@ -31,7 +31,7 @@
               android:textColor="@color/ZaasDarkGray"
               android:layout_toRightOf="@+id/serverOS"
               android:layout_marginTop="6dp"
-              android:layout_marginLeft="8dp"></TextView>
+              android:layout_marginLeft="8dp"/>
 
 
         <TextView
@@ -89,19 +89,19 @@
                       android:paddingLeft="8dp"
                       android:textSize="18sp"
                       android:gravity="center_vertical"
-                      android:minWidth="40dp"></TextView>
+                      android:minWidth="40dp"/>
 
             <TextView android:layout_width="wrap_content" android:drawableLeft="@drawable/ic_error" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:text="0" android:layout_marginRight="20px" android:id="@+id/ErrorCount" android:textColor="#ff8800"
                       android:paddingLeft="8dp"
                       android:textSize="18sp"
                       android:gravity="center_vertical"
-                      android:minWidth="40dp"></TextView>
+                      android:minWidth="40dp"/>
 
             <TextView android:layout_width="wrap_content" android:drawableLeft="@drawable/ic_warning" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:text="0" android:layout_marginRight="20px" android:id="@+id/WarningCount" android:textColor="#ffbb33"
                       android:paddingLeft="8dp"
                       android:textSize="18sp"
                       android:gravity="center_vertical"
-                      android:minWidth="40dp"></TextView>
+                      android:minWidth="40dp"/>
         </LinearLayout>
 
 
