--- a/res/layout/zenoss_widget.xml
+++ b/res/layout/zenoss_widget.xml
@@ -13,18 +13,18 @@
           android:paddingLeft="8dp"
           android:textSize="18sp"
           android:gravity="center_vertical"
-          android:minWidth="40dp"></TextView>
+          android:minWidth="40dp"/>
 
 <TextView android:layout_width="wrap_content" android:drawableLeft="@drawable/ic_error" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:text="0" android:layout_marginRight="20px" android:id="@+id/ErrorCount" android:textColor="#ff8800"
           android:paddingLeft="8dp"
           android:textSize="18sp"
           android:gravity="center_vertical"
-          android:minWidth="40dp"></TextView>
+          android:minWidth="40dp"/>
 
 <TextView android:layout_width="wrap_content" android:drawableLeft="@drawable/ic_warning" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:text="0" android:layout_marginRight="20px" android:id="@+id/WarningCount" android:textColor="#ffbb33"
           android:paddingLeft="8dp"
           android:textSize="18sp"
           android:gravity="center_vertical"
           android:minWidth="40dp"
-          android:singleLine="true"></TextView>
+          android:singleLine="true"/>
 </LinearLayout>
